{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 26,
  "lineage": "3eec1222-6fa0-f8c5-281b-2e2627ac020f",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:network-acl/acl-0b93cedb50c3953f9",
            "default_network_acl_id": "acl-0b93cedb50c3953f9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b93cedb50c3953f9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "967985385347",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-0421df49996ddace1",
              "subnet-047f82639e56e29eb",
              "subnet-071214625f7d9fe99",
              "subnet-0739da08bd41f1623",
              "subnet-086ed49666f6a0f04"
            ],
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-default-nacl"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-default-nacl"
            },
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:route-table/rtb-0bfdba4fd9a91c9f5",
            "default_route_table_id": "rtb-0bfdba4fd9a91c9f5",
            "id": "rtb-0bfdba4fd9a91c9f5",
            "owner_id": "967985385347",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-default-rt"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-default-rt"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group/sg-002689a8aac69cd23",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-002689a8aac69cd23",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "967985385347",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-default-sg"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-default-sg"
            },
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa331f7b16ed8c71",
            "arn": "arn:aws:ec2:us-east-1:967985385347:elastic-ip/eipalloc-0aa331f7b16ed8c71",
            "domain": "vpc",
            "id": "eipalloc-0aa331f7b16ed8c71",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-221-18-104.compute-1.amazonaws.com",
            "public_ip": "3.221.18.104",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-nat-eip"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:internet-gateway/igw-08ab7562046355559",
            "id": "igw-08ab7562046355559",
            "owner_id": "967985385347",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-igw"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-igw"
            },
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa331f7b16ed8c71",
            "association_id": "eipassoc-0be634777234a6228",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-009bb78388b859b6c",
            "network_interface_id": "eni-09f7002eee17a24c7",
            "private_ip": "172.31.2.150",
            "public_ip": "3.221.18.104",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0421df49996ddace1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-nat"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-nat"
            },
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02ea94eeb47fc390f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-009bb78388b859b6c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-02ea94eeb47fc390f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08ab7562046355559",
            "id": "r-rtb-0612dc1a980390f461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0612dc1a980390f46",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:route-table/rtb-0af02b9323cf66fb9",
            "id": "rtb-0af02b9323cf66fb9",
            "owner_id": "967985385347",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-intra-rt"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-intra-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:route-table/rtb-02ea94eeb47fc390f",
            "id": "rtb-02ea94eeb47fc390f",
            "owner_id": "967985385347",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-private-rt"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:route-table/rtb-0612dc1a980390f46",
            "id": "rtb-0612dc1a980390f46",
            "owner_id": "967985385347",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-public-rt"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f659aade98b372f",
            "region": "us-east-1",
            "route_table_id": "rtb-0af02b9323cf66fb9",
            "subnet_id": "subnet-071214625f7d9fe99"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9ff2475f62acc31",
            "region": "us-east-1",
            "route_table_id": "rtb-02ea94eeb47fc390f",
            "subnet_id": "subnet-047f82639e56e29eb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d53f619fa71e471",
            "region": "us-east-1",
            "route_table_id": "rtb-02ea94eeb47fc390f",
            "subnet_id": "subnet-086ed49666f6a0f04"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0517d86161bc2f981",
            "region": "us-east-1",
            "route_table_id": "rtb-0612dc1a980390f46",
            "subnet_id": "subnet-0421df49996ddace1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071880065fda42f2b",
            "region": "us-east-1",
            "route_table_id": "rtb-0612dc1a980390f46",
            "subnet_id": "subnet-0739da08bd41f1623"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:subnet/subnet-071214625f7d9fe99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071214625f7d9fe99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967985385347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "Isolation": "true",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-dmz-us-east-1a"
            },
            "tags_all": {
              "Environment": "development",
              "Isolation": "true",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-dmz-us-east-1a"
            },
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:subnet/subnet-047f82639e56e29eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047f82639e56e29eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967985385347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:subnet/subnet-086ed49666f6a0f04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086ed49666f6a0f04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967985385347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:subnet/subnet-0421df49996ddace1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0421df49996ddace1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967985385347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:subnet/subnet-0739da08bd41f1623",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0739da08bd41f1623",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967985385347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:vpc/vpc-02cd6ac6167097a01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0b93cedb50c3953f9",
            "default_route_table_id": "rtb-0bfdba4fd9a91c9f5",
            "default_security_group_id": "sg-002689a8aac69cd23",
            "dhcp_options_id": "dopt-03cc4e0d4fd4a4dd2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02cd6ac6167097a01",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfdba4fd9a91c9f5",
            "owner_id": "967985385347",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev",
              "Purpose": "main-vpc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev",
              "Purpose": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}